# asmatch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  commit_message.txt  generate_data.py  pyproject.toml  requirements.txt  setup.py
.clusterfuzzlite/: Dockerfile  project.yaml
.github/: release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  pylint.yml  release-drafter.yml  tests.yml
asmatch/: cache.py  cli.py  core.py  models.py
docs/: custom_database.md  flowcharts.md  user_stories.md
fuzzers/: fuzz_code_create_minhash.py  fuzz_code_to_minhash.py  fuzz_code_tokenize.py  fuzz_get_checksum.py  fuzz_get_normalized_string.py  fuzz_get_tokens.py  fuzz_string_checksum.py  fuzz_string_normalize.py
src/asmatch/: __init__.py  __main__.py  cache.py  cli.py  config.py  core.py  database.py  models.py
tests/: benchmark.py  generate_data.py  test_asmatch.py  test_benchmark.py  test_cache.py  test_cli.py  test_config.py  test_main.py  utils.py
tests/dest_data/: 10001021.asm  10001530.asm  1000159C.asm  10001860.asm  100019B2.asm  100019C0.asm  10001BB1.asm  10001CF0.asm  10002096.asm  100020A0.asm  10002632.asm  10003140.asm  10003170.asm  1000328D.asm  100032FA.asm  10003313.asm  10003661.asm  10003811.asm  10003820.asm  100038B4.asm  10003C3D.asm  10003C50.asm  10003CF0.asm  10004B80.asm  10004BC0.asm  10005307.asm  10005390.asm  10005720.asm  10005770.asm  100058D0.asm  10005CBD.asm  10005EF6.asm  100062B3.asm  100065C5.asm  10006728.asm  10006EC0.asm  10007050.asm  10007AE0.asm  10007BD0.asm  10007E40.asm  (+289 more)
tests/test_data/: 10001000.asm  10001021.asm  100011FB.asm  1000151F.asm  10001530.asm  1000159C.asm  10001860.asm  10001890.asm  10001910.asm  100019B2.asm  100019C0.asm  10001A60.asm  10001BB1.asm  10001BC0.asm  10001CF0.asm  10001D0E.asm  10001D70.asm  10002096.asm  100020A0.asm  10002210.asm  10002632.asm  10002770.asm  10002FFF.asm  10003140.asm  10003170.asm  100031C9.asm  1000328D.asm  100032A4.asm  100032B8.asm  100032E1.asm  100032FA.asm  10003313.asm  1000353E.asm  100035E3.asm  10003640.asm  10003661.asm  10003811.asm  10003820.asm  10003831.asm  100038B4.asm  (+649 more)
