[tool.poetry]
name = "asmatch"
version = "0.1.0"
description = "Assembly Code Similarity Search (asmatch)"
authors = ["N/A"]
license = "GPLv3"
homepage = "https://github.com/maci0/asmatch"
repository = "https://github.com/maci0/asmatch"
readme = "README.md"
packages = [{include = "asmatch", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.24"
pygments = "^2.19.2"
datasketch = "^1.6.5"
rapidfuzz = "^3.13.0"
tomli = "^2.2.1"
tomli_w = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
ruff = "^0.12.2"
black = "^25.1.0"
unittest-xml-reporting = "^3.2.0"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
asmatch = "asmatch.cli:main"

[tool.ruff]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.ruff.lint]
# Enable the isort rules.
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["asmatch"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
